Changed size of the top logo image so it no longer looks stretched out. Removed third teal shade from Nav Bar -- same color for both hover and active status.

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -36,9 +36,9 @@
 }
 
 .header__logo-desktop {
-  height: 78px;
-  width: 350px;
-  padding-bottom: 25px;
+  height: 75px;
+  width: 325px;
+  padding-bottom: 20px;
 }
 
 @media only screen and (max-width: 40em) {
